--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       homepage: 'intro.md',
       loadSidebar: 'sidebar.md',
       loadNavbar: 'navbar.md',
-      name: 'Huobi Heco Chain',
+      name: 'Huobi Eco Chain',
       auto2top: true,
       markdown: {
         gfm: true,
