add English translation

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Huobi Eco Chain</title>
+  <title>Huobi ECO Chain</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <meta name="description" content="Huobi Eco Chain">
+  <meta name="description" content="Huobi ECO Chain">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css">
 </head>
@@ -18,7 +18,7 @@
       homepage: 'intro.md',
       loadSidebar: 'sidebar.md',
       loadNavbar: 'navbar.md',
-      name: 'Huobi Eco Chain',
+      name: 'Huobi ECO Chain',
       auto2top: true,
       markdown: {
         gfm: true,
