--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     var source = document.documentElement.clientWidth > 768 ? 1 : 4;
     window.woodpecker = window.woodpecker || {
       app: 38,
-      source,
+      source: source,
       env: 'prd',
       modules: {
         vhash: {
