--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Huobi ECO Chain</title>
+  <link rel=icon href="./images/favicon.ico">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Huobi ECO Chain">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
