--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Huobi ECO Chain">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css">
+  <link rel="stylesheet" href="https://swap.hbfile.net/heco-chain-docs/css/vue.css">
 </head>
 <body>
   <div id="app"></div>
@@ -41,20 +41,20 @@
       }
     }
   </script>
-  <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
-  <script src="//unpkg.com/docsify/lib/plugins/search.min.js"></script>
-  <script src="//unpkg.com/docsify-pagination/dist/docsify-pagination.min.js"></script>
-  <script src="//unpkg.com/prismjs/components/prism-bash.min.js"></script>
-  <script src="//unpkg.com/prismjs/components/prism-json.min.js"></script>
-  <script src="//unpkg.com/prismjs/components/prism-javascript.min.js"></script>
-  <script src="//unpkg.com/prismjs/components/prism-typescript.min.js"></script>
-  <script src="//unpkg.com/prismjs/components/prism-rust.min.js"></script>
-  <script src="//unpkg.com/prismjs/components/prism-c.min.js"></script>
-  <script src="//unpkg.com/prismjs/components/prism-graphql.min.js"></script>
-  <script src="//unpkg.com/prismjs/components/prism-makefile.min.js"></script>
-  <script src="//unpkg.com/prismjs/components/prism-diff.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/docsify-tabs@1"></script>
-  <script src="https://unpkg.com/docsify-plugin-flexible-alerts"></script>
+  <script src="https://swap.hbfile.net/heco-chain-docs/js/docsify.min.js"></script>
+  <script src="https://swap.hbfile.net/heco-chain-docs/js/search.min.js"></script>
+  <script src="https://swap.hbfile.net/heco-chain-docs/js/docsify-pagination.min.js"></script>
+  <script src="https://swap.hbfile.net/heco-chain-docs/js/prism-bash.min.js"></script>
+  <script src="https://swap.hbfile.net/heco-chain-docs/js/prism-json.min.js"></script>
+  <script src="https://swap.hbfile.net/heco-chain-docs/js/prism-javascript.min.js"></script>
+  <script src="https://swap.hbfile.net/heco-chain-docs/js/prism-typescript.min.js"></script>
+  <script src="https://swap.hbfile.net/heco-chain-docs/js/prism-rust.min.js"></script>
+  <script src="https://swap.hbfile.net/heco-chain-docs/js/prism-c.min.js"></script>
+  <script src="https://swap.hbfile.net/heco-chain-docs/js/prism-graphql.min.js"></script>
+  <script src="https://swap.hbfile.net/heco-chain-docs/js/prism-makefile.min.js"></script>
+  <script src="https://swap.hbfile.net/heco-chain-docs/js/prism-diff.min.js"></script>
+  <script src="https://swap.hbfile.net/heco-chain-docs/js/docsify-tabs@1.js"></script>
+  <script src="https://swap.hbfile.net/heco-chain-docs/js/docsify-plugin-flexible-alerts.min.js"></script>
   <script>
     var source = document.documentElement.clientWidth > 768 ? 1 : 4;
     window.woodpecker = window.woodpecker || {
