restructure the docs

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Huobi ECO Chain</title>
+  <title>HECO Chain</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <meta name="description" content="Huobi ECO Chain">
+  <meta name="description" content="HECO Chain">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="https://swap.hbfile.net/heco-chain-docs/css/vue.css">
 </head>
@@ -12,13 +12,13 @@
   <div id="app"></div>
   <script>
     window.$docsify = {
-      repo: 'HuobiGroup/huobi-eco-chain-docs',
+      repo: 'stars-labs/heco-chain-docs',
       loadSidebar: true,
       subMaxLevel: 2,
       homepage: 'intro.md',
       loadSidebar: 'sidebar.md',
       loadNavbar: 'navbar.md',
-      name: 'Huobi ECO Chain',
+      name: 'HECO Chain',
       auto2top: true,
       markdown: {
         gfm: true,
@@ -26,8 +26,8 @@
       },
       themeColor: '#47b1de',
       pagination: {
-        previousText: '上一章节',
-        nextText: '下一章节',
+        previousText: 'previous',
+        nextText: 'next',
       },
       tabs: {
         persist    : true,      // default
